# SoftwareObsolescence

./: README.md
CaseStudies/: .gitignore  README.md
CaseStudies/ArduinoProject/: .cproject  .project
CaseStudies/FileZilla-3.11.0/: .cproject  ModernisationInstructions.txt  README  README.md  RefactoringInstruction.txt  aclocal.m4  configure.sh  install.sh
CaseStudies/FileZilla-3.11.0Refactored/: .project  README
CaseStudies/FileZilla-3.11.0Refactored/src/myNewLib/: Makefile.am  myNewLib.hpp  myNewLib.hpp.gch  myNewLib.vcxproj
CaseStudies/FileZilla/FileZilla-3.11.0Refactored/src/: Makefile.am
CaseStudies/FileZilla/FileZilla-3.11.0Refactored/src/interface/: locale_initializer.cpp  xmlfunctions.h
CaseStudies/FileZilla/FileZilla-3.11.0Refactored/src/myNewLib/: myNewLib.cpp
CaseStudies/HardwareMigration/: .project  README.md
CaseStudies/HardwareUpdate/: .cproject  .project  README.md
CaseStudies/XMLExample/: .cproject  README.md
CaseStudies/mFAST/: .cproject  .project  CMakeLists.txt  ModernisationInstructions.txt  README.md  RefactoringInstruction.txt  (+1 more)
org.spg.modernisation.library/: .project  build.properties  plugin.xml
org.spg.modernisation.library.feature/: .project  category.xml  feature.xml
org.spg.modernisation.library.updatesite/: .project  site.xml
org.spg.modernisation.model/: .project  plugin.xml
org.spg.refactoring/: .classpath  .project  README.md  build.properties  logback.xml  plugin.xml
org.spg.refactoring.feature/: .project  README.md  category.xml  feature.xml
org.spg.refactoring.updateSite/: .project  README.md  site.xml
(+183 files in other folders)
