#noinst_LIBRARIES = libtinyxml.a

#libtinyxml_a_SOURCES = tinyxml.cpp tinystr.cpp tinyxmlerror.cpp #tinyxmlparser.cpp
#noinst_HEADERS = tinyxml.h tinystr.h

#dist_noinst_DATA = tinyxml.vcxproj

noinst_LIBRARIES = libmynewlib.a

libmynewlib_a_SOURCES = myNewLib.cpp
noinst_HEADERS = myNewLib.hpp

dist_noinst_DATA = myNewLib.vcxproj
